update api,更新失效接口